# pdf-to-word-bot

./: .gitignore  Dockerfile  docker-compose.yml  fix_prompt.md  pyproject.toml
app/: config.py  main.py
app/handlers/: base.py  conversion.py
app/services/: converter.py  ocr_service.py  validator.py
app/utils/: file_helpers.py  logger.py
