[project]
name = "pdf-to-word-bot"
version = "0.1.0"
description = "Telegram bot for converting PDF to Word using OCR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7.0",
    "aiofiles>=24.1.0",
    "pdf2docx>=0.5.8",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "pytesseract>=0.3.13",
    "Pillow>=10.4.0",
    "loguru>=0.7.2",
    "redis>=5.0.0",
    "pydantic-settings>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
